fixed up forms, and spacing on multiple pages

--- a/app/static/base.css
+++ b/app/static/base.css
@@ -1,13 +1,6 @@
 body {
-    background-color: #2589D1;
-}
-
-a:link{
-    color: rgb(33, 123, 226);
-}
-
-a:visited{
-    color: purple;
+    background-color: #FCFAED;
+    color: #5DBCFC;
 }
 
 footer{
@@ -15,6 +8,7 @@ footer{
     text-align: center;
     bottom: 0;
     width: 100%;
+    background-color: #FCFAED;
 }
 
 .navbar-nav>li{
@@ -31,4 +25,23 @@ footer{
 
 #search_query{
     width: 100%;
+}
+
+.button{
+    background-color: #FFFFFF;
+    color: #41C672;
+    border: none;
+    box-shadow: 2.5px 2.5px #41C672;
+}
+
+#search_query{
+    border-radius: 25px;
+    padding: 0.5em;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+#logo{
+    width: 32px;
+    height: 40px;
 }
